チケット売買システムを追加

--- a/app/views/charactor_tickets/index.html.erb
+++ b/app/views/charactor_tickets/index.html.erb
@@ -11,7 +11,7 @@
       >
       <div class="card-body row">
         <div id="">
-          <%= t.title %>
+          [<%= t.charactor.name %>]<%= t.title %>
         </div>
       </div>
     </div>
