--- a/app/views/htmladmin/managed_htmls/show.html.erb
+++ b/app/views/htmladmin/managed_htmls/show.html.erb
@@ -2,7 +2,7 @@
 <%= @managed_html.body.html_safe if @managed_html.body %>
 
 <script>
-<%= @managed_html.import_js_body %>
+<%= @managed_html.import_js_body&.html_safe %>
 <%= @managed_html.js_body.html_safe if @managed_html.js_body %>
 </script>
 
