デザイン修正

--- a/app/views/htmladmin/managed_htmls/_form.html.erb
+++ b/app/views/htmladmin/managed_htmls/_form.html.erb
@@ -75,11 +75,11 @@
         </div>
   
         <div class="form-group">
-          <div class="col-lg-2">
-            <div style="float: right;">
+          <div class="">
+            <div style="">
               <%= f.label :import_js, class: "control-label" %>
             </div>
-            <div class="edit_note_label" style="float: right; text-align: right;">
+            <div class="edit_note_label">
               「jsの説明」が記入されているもののみ選択可能です
             </div>
           </div>
@@ -99,11 +99,11 @@
         </div>
   
         <div class="form-group">
-          <div class="col-lg-2">
-            <div style="float: right;">
+          <div class="">
+            <div style="">
               <%= f.label :import_css, class: "control-label" %>
             </div>
-            <div class="edit_note_label" style="float: right; text-align: right;">
+            <div class="edit_note_label">
               「cssの説明」が記入されているもののみ選択可能です
             </div>
           </div>
