--- a/app/views/htmladmin/managed_htmls/_form.html.erb
+++ b/app/views/htmladmin/managed_htmls/_form.html.erb
@@ -77,9 +77,9 @@
         <div class="form-group">
           <div class="">
             <div style="">
-              <%= f.label :import_js, class: "control-label" %>
+              <%= f.label :import_js, class: "col-lg-2 control-label" %>
             </div>
-            <div class="edit_note_label">
+            <div class="col-lg-10 edit_note_label">
               「jsの説明」が記入されているもののみ選択可能です
             </div>
           </div>
@@ -101,9 +101,9 @@
         <div class="form-group">
           <div class="">
             <div style="">
-              <%= f.label :import_css, class: "control-label" %>
+              <%= f.label :import_css, class: "col-lg-2 control-label" %>
             </div>
-            <div class="edit_note_label">
+            <div class="col-lg-10 edit_note_label">
               「cssの説明」が記入されているもののみ選択可能です
             </div>
           </div>
